section height incresed to prevent title overlap

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
 }
 
 .section{
-    height: 250px;
+    height: 280px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
